added option and background page.

--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,10 @@
     "app": { "launch": { "local_path": "main.html" } },
 
     "icons": { "16": "icon_16.png", "48": "icon_48.png", "128": "icon_128.png" },
+    
+    "background_page": "background.html",
+
+    "options_page": "options.html",
 
     "permissions": [ "tabs", "unlimitedStorage", "notifications", "geolocation", "http://*/" ]
 }
