removed geo and notification permissions.

--- a/manifest.json
+++ b/manifest.json
@@ -9,5 +9,5 @@
     
     "background_page": "background.html",
 
-    "permissions": [ "tabs", "unlimitedStorage", "notifications", "geolocation", "http://*/" ]
+    "permissions": [ "tabs", "unlimitedStorage", "http://*/" ]
 }
