--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,15 @@
 {
     "name": "Mongo Live",
     "description": "An extension that allows you to view live/real-time MongoDB stats via the REST API.",
-    "version": "0.5.6",
+    "version": "0.5.7",
 
     "app": { "launch": { "local_path": "main.html" } },
 
     "icons": { "16": "icon_16.png", "48": "icon_48.png", "128": "icon_128.png" },
     
     "background_page": "background.html",
+
+    "options_page": "options.html",
 
     "permissions": [ "unlimitedStorage", "http://*/" ]
 }
